tests/borrowck/invalid/partial_move_root_use.vit
space tests/borrowck/invalid/partial_move_root_use

form Pair {
  left: Box
  right: Box
}

form Box {
  value: int
}

proc main() -> Pair {
  let value = Pair { left: Box { value: 1 }, right: Box { value: 2 } };
  let moved = value.left;
  give value;
}
